perf(parser): bypass JavaCompiler.getTask, parse via per-thread Context
chore: checkpoint